--- a/public/index.html
+++ b/public/index.html
@@ -146,7 +146,7 @@ body {
   </div>
 
 <script>
-    const socket = new WebSocket(`ws://${location.host}/ws`);
+    const socket = new WebSocket(`wss://${location.host}/ws`);
 
     socket.addEventListener("message", (event) => {
       const data = JSON.parse(event.data);
